src/assets/css/app.css
#app-container {
  font-family: 'Boomer-Light';
}
h1 {
  font-family:'BoomerSlab';
  font-weight:bold;
  font-size:36px;
}
h3, h4 {
  font-family: 'Boomer';
  line-height: 1.3em;
  margin-bottom: 0;
  margin-top: 15px;
}
h4 {
  font-size: 18px;
}
p {
  font-family: 'Boomer-Light';
  font-size: 16px;
  line-height: 1.6;
}
p strong, li strong {
  font-family: 'Boomer';
  font-weight: bold;
}
a {
  color: #49709F;
}
a:hover {
  color: #6F92BC;
}
/*nav*/
.name {
  padding-top: 5px;
  margin: 3px;
  width: 175px;
}
.top-bar {
  background-color: #0e3968; /*override foundation default*/
  padding-left: .9375rem;
  padding-right: .9375rem; /*to match row padding inherited by everything else*/
}
#header-region .contain-to-grid {
  background-color: #0e3968;
  border-bottom: 4px solid #fff;
}
.top-bar-section ul li, .top-bar.expanded .title-area, .top-bar.expanded {
  background-color: #0e3968;
}
.top-bar-section li:not(.has-form) a.header-link {
  background-color: #0e3968;
  font-family:'Boomer-Book';
  transition:0.2s all ease;
}
.top-bar-section li:not(.has-form) a.header-link:hover {
  background-color: #49709F;
/*  background-color: #305A8C;*/ /*darker*/
/*  background-color: #1C4A7D;*/ /*lighter*/
}
.top-bar-section li.active:not(.has-form) a:not(.button), .top-bar-section li.active:not(.has-form) a:not(.button):hover {
  /*color palette: http://paletton.com/palette.php?uid=13C0u0kiRuv8YNXehCCmMqNqxmc*/
  background: #49709F none repeat scroll 0 0;
  /*background: #35608F none repeat scroll 0 0;*/
}
.top-bar-section ul li > a, .top-bar-section li:not(.has-form) a:not(.button) {
  text-transform: uppercase;
}
section {/*override fonts.css*/
  border-bottom: none;
  padding: 0
}
/* ----- CMG WRAP OVERRIDES ----- */
.authentication-change { /*log in/out*/
  font-size: 11px;
  margin-right: 5px;
}
.authentication-change.homepage a{
  color: #fff;
}
.authentication-change .cmUserAnonymous, .authentication-change .cmUserAuthed { /*hide log in/log out until auth decides which one to display*/
  display: none;
}
option {
  font-family: 'Boomer';
}
/*homepage*/
#row-bg {
  background-color: rgba(0, 0, 0, 0.7);
  padding-bottom: 40px;
  padding-top: 70px;
  color: #fff;
}
#row-bg h1 {
  color: #fff;
  font-size: 52px;
}
#bg-img {
  position: fixed;
  top: -7%;
  left: -50px;
  z-index: -10;
}
#bg-img img {
  width: 115%;
  height: auto;
}
#homepage-content p {
  font-size: 20px;
}
#homepage-bottom {
  border-top: 4px solid #fff;
  background-color:#0E3968;
}
#home-icon-row {
  padding: 40px 0;
  background-color: #0E3968;
  text-align: center;
}
#home-icon-row img {
  width: 70px;
  height: 70px;
}
#home-icon-row h3 {
  margin-top: 10px;
/*  font-family: 'Boomer-Book';*/
  text-transform: uppercase;
  font-size: 22px;
}
#home-icon-row h3 a {
  color: white;
}
#home-icon-row h3 a.hover {
  color: #A3BCDB;
}
/*Charts.BarBase*/
.axis text, .chart-label {
  font-family: 'Boomer-Book';
  font-size: 10px;
}
.base {
  fill: #EEE;
}
.axis path, .axis line {
  fill: none;
  stroke: #bbb;
  stroke-width: 1px;
  shape-rendering: crispEdges;
}
.y.axis text, .bar, .stat-circle {
  cursor: pointer;
}
.y.axis text.active {
  font-family: 'Boomer';
  font-weight: bold;
}
/*charts extended*/
rect.normal, #legend-region li.normal, #mobile-list .mobile-rating.normal {
  fill: #49709F;
  background-color: #49709F;
}
rect.range.bad, #legend-region li.bad, #mobile-list .mobile-rating.bad {
  fill: #BF653C;
  background-color: #BF653C;
}
rect.range.good, #legend-region li.good, #mobile-list .mobile-rating.good {
  fill: #489162;
  background-color: #489162;
}
#contextLines line {
  stroke-width: 3;
}
line#averageLine {
  stroke: darkgray;
}
line#nationalLine {
  stroke: #DDDDDD;
}
div.ttip {
  font-family: 'Boomer-Book';
  font-size: 12px;
  position: absolute;
  width: 270px;
  padding: 5px;
  margin: 0px;
  background-color: white;
  box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
  pointer-events: none;
  z-index: 101;
}
div.ttip strong {
  font-family: 'Boomer';
}
#main-chart-region {
  padding-bottom: 15px;
}
#legend-region li {
  display: inline;
  padding: 6px;
}
#legend-region li:last-child {
  padding-left: 0;
}
#legend-region ul {
  margin-bottom: 10px;
  margin-left: 0;
}
select#js-filter-criterion {
  margin-bottom: 0;
}
/*hospital view*/
.hospital-info h3 {
  font-family: 'BoomerSlab-Book';
  font-size:22px;
  margin-top: 0;
  margin-bottom:5px;
}
.hospital-info p {
  margin-bottom: 5px;
  line-height: 1.4em;
  font-size:12px;
}
.address {
  font-family: 'Boomer-Light';
  text-transform: uppercase;
  letter-spacing:1.5px;
  font-size: 12px;
  padding-bottom:10px;
  border-bottom:2px solid #333;
  margin-bottom:20px;
}
.hospital-list h4 {
  font-family: 'Boomer-Book';
  font-size:16px;
}
.hospital-list p {
  font-size: 12px;
  line-height: 1.5em;
  margin-bottom: 0;
}
.hospital-list .hospital-list-item hr {
  margin-top: 5px;
}
.hospital-list-item:not(:first-child) {
  margin-top: 35px;
}
.hospital-list-item.not-available {
  color: darkgray;
}
.hospital-list-item:not(.not-available) p {
  margin-top: 10px;
}
.hospital-list-item p strong {
  font-size:12px;
  font-family: 'Boomer';
  font-weight: normal;
}
#hospital-region-1 #detail-legend {
  margin-bottom: 10px;
  background:#eeeeee;
  padding:5px 10px;
  margin-top:10px;
  padding-bottom:10px;
}

#detail-legend p {
  font-size:12px;
  margin-top:10px;
}
/*hospital charts*/
.predicted {
  stroke: #aaa;
  stroke-width: 3;
}
.observed {
  stroke: #000;
  stroke-width: 3;
}
.chart-label.txt { /*labels for the observed and predicted lines*/
  font-size: 12px;
  stroke-width: 0.5;
}
.legend-svg {
  vertical-align: middle;
  height: 15px;
  width: 5px;
}
.legend-svg line {
  stroke-width: 5px;
}
.legend-circle {
  height: 8px;
  width: 8px;
}
.legend-margin {
  margin-left: 10px;
}
.dot-label {
  margin-left: 5px;
}
#detail-legend .chart-label {
  margin-left: -3px;
}
#legend-region .chart-label:not(:last-child){
  font-family: 'Boomer';
  font-weight: bold;
}
#legend-region ul {
  margin-bottom: 15px;
}

/*mobile*/
@media (max-width: 405px){
  .name {
    padding-bottom: 5px;
  }
  .mobile-rating {
    display: block;
    width: 20px;
    height: 20px;
    margin: 0 auto;
  }
  #hospital-show-region {
    display: none;
  }
  #homepage-content p {
    font-size: 14px;
  }
  #bg-img {
    top: 0px;
    left: -400px;
  }
  #bg-img img {
    max-width: 1000px;
    width: auto;
  }
  #row-bg {
    padding-bottom: 15px;
    padding-top: 15px;
  }
  #row-bg h1, h1 {
    font-size: 30px;
  }
  #home-icon-row img {
    width: 40px;
  }
  #home-icon-row h3 {
    font-size: 14px;
  }
  #dot-legend {
    display: none;
  }
}
@media (max-width: 998px) and (min-width: 406px){
  #bg-img {
    top: -200px;
    left: -700px;
  }
  #bg-img img {
    max-width: 1500px;
    width: auto;
  }
  #row-bg {
    padding: 20px 15px 20px 15px;
  }
}

